# hcmp

./: .gitignore  README.md  design.md  hcmp_v1_descriptor_summary.md  pyproject.toml  requirements.txt  segmentation_rule.md
configs/: hcmp_debug.yaml  hcmp_pretrain.yaml  segmentation.yaml
hcmp/: __init__.py
hcmp/chemistry/: __init__.py  segmentation.py
hcmp/data/: __init__.py  chembl_cleaning.py  datasets.py  descriptor_pairs.py  descriptors.py  graph_builder.py  graph_cache.py  molecule_table.py  scaffold_triplets.py
hcmp/models/: __init__.py  grouped_ops.py  hcmp_model.py  heads.py  pooling.py
hcmp/training/: __init__.py  curriculum.py  loss_balancing.py  losses.py  trainer.py
hcmp/utils/: __init__.py  config.py  io.py  seed.py
hcmp/visualization/: __init__.py  visualize_segmentation.py
results/segmentation_visualization/: 0000_ethylene_bond_labels.csv  0000_ethylene_segments.csv  0001_butadiene_bond_labels.csv  0001_butadiene_segments.csv  0002_allene_bond_labels.csv  (+39 more)
scripts/: 01_debug_segmentation.py  02_segment_bbbp.py  03_compute_descriptors.py  04_build_descriptor_pairs.py  05_build_scaffold_triplets.py  06_train_hcmp.py  benchmark_model_forward.py  check_vectorized_equivalence.py  estimate_descriptor_thresholds.py  finetune_downstream.py  make_pretrain_matrix_configs.py  precompute_graph_cache.py  prepare_chembl_pretrain.py  report_pretrain_downstream_overlap.py  run_downstream_matrix.py  summarize_results.py  train_hcmp.py
tests/: test_graph_cache_chunked.py  test_scaffold_on_the_fly.py  test_segmentation.py  test_training_framework.py
(+19 files in other folders)
